--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/react": "^7.45.0",
+    "@sentry/tracing": "^7.45.0",
     "cal-sans": "^1.0.1",
     "eslint-config-standard": "^17.0.0",
     "react": "^18.2.0",
